<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.FoodActivity"
    tools:showIn="@layout/activity_food">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakFast"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeFrom7_9"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1BF"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2BF"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3BF"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeFrom10"
            android:textSize="20sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op4BF"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:textSize="24sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1L"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2L"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3L"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op4label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op4L"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeFrom4"
            android:textSize="20sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op5L"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner"
            android:textSize="24sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op1D"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op2D"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3label"
            android:textSize="18sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op3D"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeFromSleep"
            android:textSize="20sp"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/op4D"
            android:textSize="16sp"
            android:textColor="@color/colorBlack" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>