<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/insulin"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:layout_editor_absoluteX="122dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/insulin"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/glycemia"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/period"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/morningInsulin"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/dinner"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/morningGlycemia"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/lunch"
                    android:textAlignment="center" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/morning"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/noonInsulin"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/dinner"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/noonGlycemia"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/lunch"
                    android:textAlignment="center" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/noon"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/eveningInsulin"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/dinner"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/eveningGlycemia"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/lunch"
                    android:textAlignment="center" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/evening"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sleepInsulin"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/dinner"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/sleepGlycemia"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/lunch"
                    android:textAlignment="center" />

                <TextView
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/before_sleep"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold|italic" />
            </TableRow>


        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>