<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/weight_in_kg"
        android:id="@+id/kg"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableLeft="@drawable/ic_45_minutes"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/height_in_cm"
        android:id="@+id/cm"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableLeft="@drawable/ic_45_minutes"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/password"
        android:id="@+id/pass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableLeft="@drawable/ic_45_minutes"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>