<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3">

    <TextView
        android:id="@+id/shotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cure_text"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecondaryDark"
        android:drawableEnd="@drawable/ic_plus_solid"
        android:paddingEnd="20dp"
        android:paddingStart="0dp"
        android:text="@string/add"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:paddingStart="0dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shotTitle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:hint="@string/measure_time"
                android:paddingStart="0dp"
                android:paddingEnd="20dp" />

            <Spinner
                android:id="@+id/spPeriod"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnWakeUpTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/dividerColor"
                    app:srcCompat="@drawable/ic_30_minutes"
                    android:contentDescription="@string/todo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etWakeUpTime"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:focusable="false"
                        android:hint="@string/time"
                        android:text="@string/_00_00"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/shotDateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/dividerColor"
                    app:srcCompat="@drawable/ic_30_minutes"
                    android:contentDescription="@string/todo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shotDate"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:focusable="false"
                        android:hint="@string/time"
                        android:text="@string/_00_00"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etGlycemia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:theme="@style/TextInputLayoutAppearance"
                app:layout_constraintEnd_toStartOf="@+id/etSleepTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shotTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/measure_value"
                    android:inputType="numberDecimal"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    android:text="@string/cure_text" />

                <Spinner
                    android:id="@+id/spCure"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>